languages/CNNArchLang/src/test/resources/invalid_tests/DuplicatedArgument.cnna
/* (c) https://github.com/MontiCore/monticore */
architecture DuplicatedArgument(){
    def input Q(-oo:+oo)^{10} in1
    def output Q(0:1)^{2} out1

    in1 ->
    FullyConnected(units=64, units=32) ->
    Tanh() ->
    FullyConnected(units=2) ->
    Softmax() ->
    out1;
}
